# hunt-entity

./: .gitignore  .travis.yml  README.md  dub.json  dub.selections.json  hunt-entity.code-workspace  meson.build  meson_options.txt
examples/: .gitignore  dub.json
examples/EntityTest/: dub.json
examples/EntityTest/source/: app.d
examples/EntityTest/source/Model/: AppInfo.d  LoginInfo.d  UserInfo.d
examples/UnitTest/: dub.json
examples/UnitTest/source/: app.d
examples/UnitTest/source/model/: Agent.d  AgentAsset.d  AppInfo.d  Car.d  IDCard.d  LoginInfo.d  PropertyEntityImpl.d  UserApp.d  UserInfo.d
examples/UnitTest/sql/MySQL/: exampledb.sql
examples/UnitTest/sql/PostgreSQL/: exampledb.sql
examples/base/: ddbctest.REMOVED.git-id  dub.json  dub.selections.json
examples/base/source/: main.d
examples/criteria/: example.REMOVED.git-id
examples/criteria/source/: app.d
examples/dialect/: example.REMOVED.git-id
examples/dialect/source/: app.d
examples/eql/: .gitignore  core.REMOVED.git-id  dub.json  dub.selections.json  eql.REMOVED.git-id
examples/eql/source/: app.d
examples/eql/source/Model/: AppInfo.d  LoginInfo.d  UserInfo.d
examples/eql/source/model/: AppInfo.d  LoginInfo.d  UserInfo.d
examples/mysql/: .gitignore  dub.json
examples/mysql/source/: app.d
examples/mysql/source/Model/: Car.d  IDCard.d  UserApp.d  UserInfo.d
examples/mysql/source/SqlStruct/: Blog.d  Book.d  BookDetail.d  User.d
examples/mysql/source/model/: Car.d  LoginInfo.d  UserApp.d  UserInfo.d
examples/orm/: dub.json  example.REMOVED.git-id
examples/orm/source/: app.d
examples/ormWithSqlite/: dub.json
examples/ormWithSqlite/source/: app.d
examples/postgresql/: .gitignore  dub.json
examples/postgresql/resources/: exampledb.sql
examples/postgresql/source/: app.d
examples/postgresql/source/Model/: AppInfo.d  Car.d  IDCard.d  LoginInfo.d  UserApp.d  UserInfo.d
examples/postgresql/source/model/: AppInfo.d  Car.d  IDCard.d  LoginInfo.d  UserInfo.d
examples/source/: app.d
examples/sqlBuilder/: example.REMOVED.git-id
examples/sqlBuilder/source/: app.d
source/: app.d  main.d
source/database/: database.d  muitlquery.d  query.d  querybuilder.d
source/database/dbdrive/: impl.d  mysql.d  pgsql.d  sqlite.d
source/entity/: Common.d  Constant.d  DefaultEntityManagerFactory.d  Entity.d  EntityCreateTable.d  EntityException.d  EntityExpression.d  EntityFieldInfo.d  EntityFieldManyToMany.d  EntityFieldManyToOne.d  EntityFieldNormal.d  EntityFieldObject.d  EntityFieldOneToMany.d  EntityFieldOneToOne.d  EntityFieldOwner.d  EntityInfo.d  EntityInterface.d  EntityManager.d  EntityManagerFactory.d  EntityOption.d  EntitySession.d  EntityTransaction.d  Persistence.d  Query.d  TypedQuery.d  annotations.d  core.d  criteriabuilder.d  database.d  defined.d  dialect.d  entity.d  entityinfo.d  entitymanager.d  entitymanagerfactory.d  entitysession.d  exception.d  fieldinfo.d  manager.d  metadata.d  (+8 more)
source/entity/criteria/: CriteriaBase.d  CriteriaBuilder.d  CriteriaDelete.d  CriteriaQuery.d  CriteriaUpdate.d  Expression.d  Join.d  Long.d  Order.d  Predicate.d  Root.d  package.d
source/entity/criteriabuilder/: criteriabuilder.d
source/entity/dbdrive/: impl.d  mysql.d  pgsql.d  sqlite.d
source/entity/dialect/: dialect.d  mysqldialect.d  postgresqldialect.d  sqlitedialect.d
source/entity/dialects/: mysqldialect.d  pgsqldialect.d  sqlitedialect.d
source/entity/domain/: Condition.d  Member.d  Page.d  Pageable.d  Sort.d  Specification.d  package.d
source/entity/driver/: impl.d  mysql.d  pgsql.d  sqlite.d
source/entity/entity/: entityinfo.d  entitymanager.d  entitymanagerfactory.d  entitysession.d  fieldinfo.d  persistence.d
source/entity/querybuilder/: defined.d  expression.d  joinexpression.d  multiwhereexpression.d  querybuilder.d  valueexpression.d  whereexpression.d
source/entity/repository/: CrudRepository.d  EntityRepository.d  Repository.d  package.d
source/entity/utils/: Common.d  memory.d  serialize.d  time.d
source/hunt/entity/: Constant.d  DefaultEntityManagerFactory.d  Entity.d  EntityCreateTable.d  EntityDeserializer.d  EntityException.d  EntityExpression.d  EntityFieldInfo.d  EntityFieldManyToMany.d  EntityFieldManyToManyOwner.d  EntityFieldManyToOne.d  EntityFieldNormal.d  EntityFieldObject.d  EntityFieldOneToMany.d  EntityFieldOneToOne.d  EntityFieldOwner.d  EntityInfo.d  EntityInfoMaker.d  EntityManager.d  EntityManagerFactory.d  EntityMetaInfo.d  EntityOption.d  EntitySession.d  EntityTransaction.d  Model.d  NativeQuery.d  Persistence.d  Query.d  SimpleEntityInfo.d  TypedQuery.d  package.d
source/hunt/entity/criteria/: CriteriaBase.d  CriteriaBuilder.d  CriteriaDelete.d  CriteriaQuery.d  CriteriaUpdate.d  Join.d  Long.d  Order.d  Predicate.d  Root.d  package.d
source/hunt/entity/dialect/: Dialect.d  MySQLDialect.d  PostgreSQLDialect.d  package.d
source/hunt/entity/domain/: Condition.d  Member.d  Page.d  Pageable.d  Sort.d  Specification.d  package.d
source/hunt/entity/eql/: Common.d  EqlCache.d  EqlInfo.d  EqlParse.d  EqlQuery.d  ResultDes.d  package.d
source/hunt/entity/repository/: CrudRepository.d  EntityRepository.d  Repository.d  package.d
source/hunt/entity/utils/: Common.d
subprojects/: hunt-database.wrap  hunt-sql.wrap
